# wtm

./: Cargo.toml  README.md
src/: app.rs  config.rs  main.rs
src/git/: mod.rs  worktree.rs
src/status/: mod.rs  template.rs
src/ui/: detail.rs  dialogs.rs  layout.rs  list.rs  mod.rs
